--- a/res/po/az.po
+++ b/res/po/az.po
@@ -1,3 +1,9 @@
+msgid "IDS_COM_BODY_DELETE"
+msgstr "Sil"
+
+msgid "IDS_COM_BODY_CREATE_FOLDER"
+msgstr "Qovluq yarat"
+
 msgid "IDS_MF_POP_ERR_FOLDER_NAME_EMPTY"
 msgstr "Qovluq adını daxil edin."
 
@@ -25,11 +31,35 @@ msgstr "Elementləri seç"
 msgid "IDS_VR_POP_INVALID_CHARACTER_ENTERED_TRY_AGAIN"
 msgstr "Səhv simvol daxil edilib. Təkrar cəhd et"
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "Axtarış"
+
+msgid "IDS_COM_POP_MAXIMUM_NUMBER_OF_CHARACTERS_REACHED"
+msgstr "Simvol sayı maksimuma çatıb."
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "Emal edilir..."
+
+msgid "IDS_COM_SK_ADD"
+msgstr "Əlavə et"
+
+msgid "IDS_COM_SK_OK"
+msgstr "OK"
+
+msgid "IDS_COM_SK_CANCEL"
+msgstr "Ləğv et"
+
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Səssiz"
 
+msgid "IDS_COM_BODY_SELECT_ALL"
+msgstr "Hamısını seç"
+
 msgid "IDS_COM_BODY_PD_SELECTED"
 msgstr "%d seçilmişdir"
+
+msgid "IDS_COM_BODY_UNSUPPORTED_FILE_TYPE"
+msgstr "Dəstəklənməyən fayl tipi."
 
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Siz maksimum %d element seçə bilərsiniz."
@@ -37,14 +67,44 @@ msgstr "Siz maksimum %d element seçə bilərsiniz."
 msgid "IDS_MF_POP_DELETE_Q"
 msgstr "Silinsin?"
 
+msgid "IDS_COM_POP_FAILED"
+msgstr "Mümkün olmadı."
+
+msgid "IDS_COM_SK_DONE"
+msgstr "Bitdi"
+
+msgid "IDS_COM_BODY_NO_ITEMS"
+msgstr "Elementlər yoxdur"
+
 msgid "IDS_MF_BODY_SD_CARD_ABB"
 msgstr "SD kartı"
 
 msgid "IDS_MF_BODY_DEVICE_MEMORY_ABB"
 msgstr "Cihaz yaddaşı"
 
+msgid "IDS_COM_BODY_OPERATION_FAILED"
+msgstr "Əməliyyat alınmadı."
+
 msgid "IDS_MUSIC_POP_UNABLE_TO_PLAY_ERROR_OCCURRED"
 msgstr "Səsləndirmək mümkün deyil. Səhv baş verdi."
+
+msgid "IDS_COM_BODY_UNKNOWN"
+msgstr "Naməlum"
+
+msgid "IDS_COM_POP_CONNECTION_FAILED"
+msgstr "Əlaqə mümkün olmadı."
+
+msgid "IDS_COM_SK_BACK"
+msgstr "Geriyə"
+
+msgid "IDS_COM_POP_ALREDY_EXISTS"
+msgstr "Artıq mövcuddur."
+
+msgid "IDS_COM_BODY_MY_FILES"
+msgstr "Mənim fayllarım"
+
+msgid "IDS_COM_POP_NOT_ENOUGH_MEMORY"
+msgstr "Yaddaş kifayət etmir."
 
 msgid "IDS_TPLATFORM_ACBUTTON_DONE_ABB"
 msgstr "HAZIR"
@@ -57,6 +117,10 @@ msgstr "Fayl ölçüsü (%d MB) maksimumu keçib."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Faylların maksimum sayını keçib."
+
 msgid "IDS_COM_OPT_IMPORT"
 msgstr "Gətir"
+
+msgid "IDS_COM_POP_FOLDER"
+msgstr "Qovluq"
 
