--- a/res/po/hi.po
+++ b/res/po/hi.po
@@ -1,3 +1,9 @@
+msgid "IDS_COM_BODY_DELETE"
+msgstr "हटाएँ"
+
+msgid "IDS_COM_BODY_CREATE_FOLDER"
+msgstr "फोल्डर बनाएँ"
+
 msgid "IDS_MF_POP_ERR_FOLDER_NAME_EMPTY"
 msgstr "फोल्डर नाम प्रविष्ट करें।"
 
@@ -25,11 +31,35 @@ msgstr "मदें चुनें"
 msgid "IDS_VR_POP_INVALID_CHARACTER_ENTERED_TRY_AGAIN"
 msgstr "अमान्य वर्ण प्रविष्ट किए गए। फिर से प्रयास करें।"
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "खोजें"
+
+msgid "IDS_COM_POP_MAXIMUM_NUMBER_OF_CHARACTERS_REACHED"
+msgstr "वर्णो की संख्‍या अधिकतम पहुँची।"
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "प्रक्रिया हो रही है..."
+
+msgid "IDS_COM_SK_ADD"
+msgstr "जोड़ें"
+
+msgid "IDS_COM_SK_OK"
+msgstr "ओके"
+
+msgid "IDS_COM_SK_CANCEL"
+msgstr "रद्द"
+
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "शांत"
 
+msgid "IDS_COM_BODY_SELECT_ALL"
+msgstr "सभी चुनें"
+
 msgid "IDS_COM_BODY_PD_SELECTED"
 msgstr "%d चयनित।"
+
+msgid "IDS_COM_BODY_UNSUPPORTED_FILE_TYPE"
+msgstr "असमर्थित फाइल प्रकार।"
 
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "आप %d मद तक चुन सकते हैं"
@@ -37,14 +67,44 @@ msgstr "आप %d मद तक चुन सकते हैं"
 msgid "IDS_MF_POP_DELETE_Q"
 msgstr "हटाएँ?"
 
+msgid "IDS_COM_POP_FAILED"
+msgstr "विफल।"
+
+msgid "IDS_COM_SK_DONE"
+msgstr "पूर्ण"
+
+msgid "IDS_COM_BODY_NO_ITEMS"
+msgstr "कोई मदें नहीं"
+
 msgid "IDS_MF_BODY_SD_CARD_ABB"
 msgstr "SD कार्ड"
 
 msgid "IDS_MF_BODY_DEVICE_MEMORY_ABB"
 msgstr "डिवाइस मेमोरी"
 
+msgid "IDS_COM_BODY_OPERATION_FAILED"
+msgstr "संचालन विफल।"
+
 msgid "IDS_MUSIC_POP_UNABLE_TO_PLAY_ERROR_OCCURRED"
 msgstr "चलाने में असमर्थ। त्रुटि पाई गई।"
+
+msgid "IDS_COM_BODY_UNKNOWN"
+msgstr "अज्ञात"
+
+msgid "IDS_COM_POP_CONNECTION_FAILED"
+msgstr "कनेक्शन विफल।"
+
+msgid "IDS_COM_SK_BACK"
+msgstr "पीछे"
+
+msgid "IDS_COM_POP_ALREDY_EXISTS"
+msgstr "पहले से ही मौजूद।"
+
+msgid "IDS_COM_BODY_MY_FILES"
+msgstr "मेरी फाइलें"
+
+msgid "IDS_COM_POP_NOT_ENOUGH_MEMORY"
+msgstr "पर्याप्‍त मेमोरी नहीं।"
 
 msgid "IDS_TPLATFORM_ACBUTTON_DONE_ABB"
 msgstr "पूर्ण"
@@ -57,6 +117,10 @@ msgstr "अधिकतम फ़ाइल आकार (%d MB) पार हु
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "फाइलों का अधिकतम आकार पार कर गया है।"
+
 msgid "IDS_COM_OPT_IMPORT"
 msgstr "आयात करें"
+
+msgid "IDS_COM_POP_FOLDER"
+msgstr "फोल्डर"
 
