--- a/res/po/sk.po
+++ b/res/po/sk.po
@@ -1,3 +1,9 @@
+msgid "IDS_COM_BODY_DELETE"
+msgstr "Odstrániť"
+
+msgid "IDS_COM_BODY_CREATE_FOLDER"
+msgstr "Vytvoriť priečinok"
+
 msgid "IDS_MF_POP_ERR_FOLDER_NAME_EMPTY"
 msgstr "Zadajte názov priečinka."
 
@@ -25,11 +31,35 @@ msgstr "Vybrať položky"
 msgid "IDS_VR_POP_INVALID_CHARACTER_ENTERED_TRY_AGAIN"
 msgstr "Zadali ste neplatný znak. Skúste to znova"
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "Hľadať"
+
+msgid "IDS_COM_POP_MAXIMUM_NUMBER_OF_CHARACTERS_REACHED"
+msgstr "Bol dosiahnutý maximálny počet znakov."
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "Prebieha spracovanie..."
+
+msgid "IDS_COM_SK_ADD"
+msgstr "Pridať"
+
+msgid "IDS_COM_SK_OK"
+msgstr "OK"
+
+msgid "IDS_COM_SK_CANCEL"
+msgstr "Zrušiť"
+
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Tichý"
 
+msgid "IDS_COM_BODY_SELECT_ALL"
+msgstr "Vybrať všetky"
+
 msgid "IDS_COM_BODY_PD_SELECTED"
 msgstr "Vybraté: %d"
+
+msgid "IDS_COM_BODY_UNSUPPORTED_FILE_TYPE"
+msgstr "Nepodporovaný typ súboru."
 
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Môžete vybrať maximálne %d položiek."
@@ -37,14 +67,44 @@ msgstr "Môžete vybrať maximálne %d položiek."
 msgid "IDS_MF_POP_DELETE_Q"
 msgstr "Odstrániť?"
 
+msgid "IDS_COM_POP_FAILED"
+msgstr "Nepodarilo sa."
+
+msgid "IDS_COM_SK_DONE"
+msgstr "Hotovo"
+
+msgid "IDS_COM_BODY_NO_ITEMS"
+msgstr "Žiadne položky"
+
 msgid "IDS_MF_BODY_SD_CARD_ABB"
 msgstr "Karta SD"
 
 msgid "IDS_MF_BODY_DEVICE_MEMORY_ABB"
 msgstr "Pamäť zariadenia"
 
+msgid "IDS_COM_BODY_OPERATION_FAILED"
+msgstr "Operácia zlyhala."
+
 msgid "IDS_MUSIC_POP_UNABLE_TO_PLAY_ERROR_OCCURRED"
 msgstr "Nedá sa prehrať. Vyskytla sa chyba."
+
+msgid "IDS_COM_BODY_UNKNOWN"
+msgstr "Neznáme"
+
+msgid "IDS_COM_POP_CONNECTION_FAILED"
+msgstr "Pripojenie sa nepodarilo."
+
+msgid "IDS_COM_SK_BACK"
+msgstr "Späť"
+
+msgid "IDS_COM_POP_ALREDY_EXISTS"
+msgstr "Už existuje."
+
+msgid "IDS_COM_BODY_MY_FILES"
+msgstr "Moje súbory"
+
+msgid "IDS_COM_POP_NOT_ENOUGH_MEMORY"
+msgstr "Nedostatok pamäte."
 
 msgid "IDS_TPLATFORM_ACBUTTON_DONE_ABB"
 msgstr "HOTOVO"
@@ -57,6 +117,10 @@ msgstr "Prekročila sa maximálna veľkosť súboru (%d MB)."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Prekročila sa maximálna veľkosť súborov."
+
 msgid "IDS_COM_OPT_IMPORT"
 msgstr "Importovať"
+
+msgid "IDS_COM_POP_FOLDER"
+msgstr "Priečinok"
 
