--- a/res/po/et.po
+++ b/res/po/et.po
@@ -1,3 +1,9 @@
+msgid "IDS_COM_BODY_DELETE"
+msgstr "Kustuta"
+
+msgid "IDS_COM_BODY_CREATE_FOLDER"
+msgstr "Loo kaust"
+
 msgid "IDS_MF_POP_ERR_FOLDER_NAME_EMPTY"
 msgstr "Sisestage kausta nimi."
 
@@ -25,11 +31,35 @@ msgstr "Vali üksused"
 msgid "IDS_VR_POP_INVALID_CHARACTER_ENTERED_TRY_AGAIN"
 msgstr "Sisestati vale tähemärk. Proovige uuesti"
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "Otsi"
+
+msgid "IDS_COM_POP_MAXIMUM_NUMBER_OF_CHARACTERS_REACHED"
+msgstr "Lubatud arv märke on täis."
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "Töötlemine..."
+
+msgid "IDS_COM_SK_ADD"
+msgstr "Lisa"
+
+msgid "IDS_COM_SK_OK"
+msgstr "OK"
+
+msgid "IDS_COM_SK_CANCEL"
+msgstr "Tühista"
+
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Vaikne"
 
+msgid "IDS_COM_BODY_SELECT_ALL"
+msgstr "Vali kõik"
+
 msgid "IDS_COM_BODY_PD_SELECTED"
 msgstr "%d valitud"
+
+msgid "IDS_COM_BODY_UNSUPPORTED_FILE_TYPE"
+msgstr "Toetuseta failitüüp."
 
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Te voite valida kuni %d uksust."
@@ -37,14 +67,44 @@ msgstr "Te voite valida kuni %d uksust."
 msgid "IDS_MF_POP_DELETE_Q"
 msgstr "Kustutada?"
 
+msgid "IDS_COM_POP_FAILED"
+msgstr "Nurjus."
+
+msgid "IDS_COM_SK_DONE"
+msgstr "Valmis"
+
+msgid "IDS_COM_BODY_NO_ITEMS"
+msgstr "Üksusi ei ole"
+
 msgid "IDS_MF_BODY_SD_CARD_ABB"
 msgstr "SD-kaart"
 
 msgid "IDS_MF_BODY_DEVICE_MEMORY_ABB"
 msgstr "Seadme mälu"
 
+msgid "IDS_COM_BODY_OPERATION_FAILED"
+msgstr "Toiming nurjus."
+
 msgid "IDS_MUSIC_POP_UNABLE_TO_PLAY_ERROR_OCCURRED"
 msgstr "Ei saa esitada. Ilmnes tõrge."
+
+msgid "IDS_COM_BODY_UNKNOWN"
+msgstr "Tundmatu"
+
+msgid "IDS_COM_POP_CONNECTION_FAILED"
+msgstr "Ühendamine nurjus."
+
+msgid "IDS_COM_SK_BACK"
+msgstr "Tagasi"
+
+msgid "IDS_COM_POP_ALREDY_EXISTS"
+msgstr "Juba olemas."
+
+msgid "IDS_COM_BODY_MY_FILES"
+msgstr "Minu Failid"
+
+msgid "IDS_COM_POP_NOT_ENOUGH_MEMORY"
+msgstr "Mälu pole piisavalt."
 
 msgid "IDS_TPLATFORM_ACBUTTON_DONE_ABB"
 msgstr "VALMIS"
@@ -57,6 +117,10 @@ msgstr "Faili maksimaalne suurus (%d MB) on ületatud."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Maksimaalne failide suurus on ületatud."
+
 msgid "IDS_COM_OPT_IMPORT"
 msgstr "Import"
+
+msgid "IDS_COM_POP_FOLDER"
+msgstr "Kaust"
 
