--- a/res/po/fr.po
+++ b/res/po/fr.po
@@ -1,3 +1,9 @@
+msgid "IDS_COM_BODY_DELETE"
+msgstr "Supprimer"
+
+msgid "IDS_COM_BODY_CREATE_FOLDER"
+msgstr "Créer dossier"
+
 msgid "IDS_MF_POP_ERR_FOLDER_NAME_EMPTY"
 msgstr "Entrer nom du dossier"
 
@@ -25,11 +31,35 @@ msgstr "Sélectionner éléments"
 msgid "IDS_VR_POP_INVALID_CHARACTER_ENTERED_TRY_AGAIN"
 msgstr "Caractère non valide saisi. Réessayez."
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "Rechercher"
+
+msgid "IDS_COM_POP_MAXIMUM_NUMBER_OF_CHARACTERS_REACHED"
+msgstr "Nb max de caractères atteint"
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "En cours..."
+
+msgid "IDS_COM_SK_ADD"
+msgstr "Ajouter"
+
+msgid "IDS_COM_SK_OK"
+msgstr "OK"
+
+msgid "IDS_COM_SK_CANCEL"
+msgstr "Annuler"
+
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Discret"
 
+msgid "IDS_COM_BODY_SELECT_ALL"
+msgstr "Sélect. tout"
+
 msgid "IDS_COM_BODY_PD_SELECTED"
 msgstr "%d sélectionné(es)"
+
+msgid "IDS_COM_BODY_UNSUPPORTED_FILE_TYPE"
+msgstr "Type de fichier non pris en charge"
 
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Vous pouvez sélectionner jusqu'à %d éléments."
@@ -37,14 +67,44 @@ msgstr "Vous pouvez sélectionner jusqu'à %d éléments."
 msgid "IDS_MF_POP_DELETE_Q"
 msgstr "Supprimer ?"
 
+msgid "IDS_COM_POP_FAILED"
+msgstr "Échec"
+
+msgid "IDS_COM_SK_DONE"
+msgstr "Effectué"
+
+msgid "IDS_COM_BODY_NO_ITEMS"
+msgstr "Aucun élément"
+
 msgid "IDS_MF_BODY_SD_CARD_ABB"
 msgstr "Carte SD"
 
 msgid "IDS_MF_BODY_DEVICE_MEMORY_ABB"
 msgstr "Mémoire de l'appareil"
 
+msgid "IDS_COM_BODY_OPERATION_FAILED"
+msgstr "Échec de l'opération."
+
 msgid "IDS_MUSIC_POP_UNABLE_TO_PLAY_ERROR_OCCURRED"
 msgstr "Lecture impossible. Une erreur s'est produite."
+
+msgid "IDS_COM_BODY_UNKNOWN"
+msgstr "Inconnu"
+
+msgid "IDS_COM_POP_CONNECTION_FAILED"
+msgstr "Échec de connexion au réseau."
+
+msgid "IDS_COM_SK_BACK"
+msgstr "Retour"
+
+msgid "IDS_COM_POP_ALREDY_EXISTS"
+msgstr "Existe déjà"
+
+msgid "IDS_COM_BODY_MY_FILES"
+msgstr "Mes fichiers"
+
+msgid "IDS_COM_POP_NOT_ENOUGH_MEMORY"
+msgstr "Mémoire insuffisante"
 
 msgid "IDS_TPLATFORM_ACBUTTON_DONE_ABB"
 msgstr "OK"
@@ -57,6 +117,10 @@ msgstr "Taille maximale de fichiers (%d Mo) dépassée"
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Taille maximale des fichiers dépassée"
+
 msgid "IDS_COM_OPT_IMPORT"
 msgstr "Importer"
+
+msgid "IDS_COM_POP_FOLDER"
+msgstr "Dossier"
 
