--- a/res/po/it_IT.po
+++ b/res/po/it_IT.po
@@ -1,3 +1,9 @@
+msgid "IDS_COM_BODY_DELETE"
+msgstr "Elimina"
+
+msgid "IDS_COM_BODY_CREATE_FOLDER"
+msgstr "Crea cartella"
+
 msgid "IDS_MF_POP_ERR_FOLDER_NAME_EMPTY"
 msgstr "Inserite nome cartella"
 
@@ -25,11 +31,35 @@ msgstr "Seleziona elementi"
 msgid "IDS_VR_POP_INVALID_CHARACTER_ENTERED_TRY_AGAIN"
 msgstr "Carattere inserito non valido. Riprovate."
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "Cerca"
+
+msgid "IDS_COM_POP_MAXIMUM_NUMBER_OF_CHARACTERS_REACHED"
+msgstr "Raggiunto numero massimo di caratteri."
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "Elaborazione..."
+
+msgid "IDS_COM_SK_ADD"
+msgstr "Aggiungi"
+
+msgid "IDS_COM_SK_OK"
+msgstr "OK"
+
+msgid "IDS_COM_SK_CANCEL"
+msgstr "Annulla"
+
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Silenzioso"
 
+msgid "IDS_COM_BODY_SELECT_ALL"
+msgstr "Seleziona tutto"
+
 msgid "IDS_COM_BODY_PD_SELECTED"
 msgstr "%d selezionato/i"
+
+msgid "IDS_COM_BODY_UNSUPPORTED_FILE_TYPE"
+msgstr "Tipo file non supportato."
 
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "È possibile selezionare fino a %d elementi."
@@ -37,14 +67,44 @@ msgstr "È possibile selezionare fino a %d elementi."
 msgid "IDS_MF_POP_DELETE_Q"
 msgstr "Eliminare?"
 
+msgid "IDS_COM_POP_FAILED"
+msgstr "Errore"
+
+msgid "IDS_COM_SK_DONE"
+msgstr "Fatto"
+
+msgid "IDS_COM_BODY_NO_ITEMS"
+msgstr "Nessun elemento"
+
 msgid "IDS_MF_BODY_SD_CARD_ABB"
 msgstr "Scheda SD"
 
 msgid "IDS_MF_BODY_DEVICE_MEMORY_ABB"
 msgstr "Memoria dispositivo"
 
+msgid "IDS_COM_BODY_OPERATION_FAILED"
+msgstr "Operazione non eseguita."
+
 msgid "IDS_MUSIC_POP_UNABLE_TO_PLAY_ERROR_OCCURRED"
 msgstr "Impossibile riprodurre. Si è verificato un errore."
+
+msgid "IDS_COM_BODY_UNKNOWN"
+msgstr "Sconosciuto"
+
+msgid "IDS_COM_POP_CONNECTION_FAILED"
+msgstr "Errore connessione."
+
+msgid "IDS_COM_SK_BACK"
+msgstr "Indietro"
+
+msgid "IDS_COM_POP_ALREDY_EXISTS"
+msgstr "Già esiste."
+
+msgid "IDS_COM_BODY_MY_FILES"
+msgstr "Archivio"
+
+msgid "IDS_COM_POP_NOT_ENOUGH_MEMORY"
+msgstr "Memoria insufficiente."
 
 msgid "IDS_TPLATFORM_ACBUTTON_DONE_ABB"
 msgstr "FATTO"
@@ -57,6 +117,10 @@ msgstr "La dimensione massima del file (%d MB) è stata superata."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Dimensioni massime dei file superate."
+
 msgid "IDS_COM_OPT_IMPORT"
 msgstr "Importa"
+
+msgid "IDS_COM_POP_FOLDER"
+msgstr "Cartella"
 
