--- a/res/po/ko_KR.po
+++ b/res/po/ko_KR.po
@@ -1,3 +1,9 @@
+msgid "IDS_COM_BODY_DELETE"
+msgstr "삭제"
+
+msgid "IDS_COM_BODY_CREATE_FOLDER"
+msgstr "새 폴더 추가"
+
 msgid "IDS_MF_POP_ERR_FOLDER_NAME_EMPTY"
 msgstr "폴더 이름을 입력하세요."
 
@@ -25,11 +31,35 @@ msgstr "항목 선택"
 msgid "IDS_VR_POP_INVALID_CHARACTER_ENTERED_TRY_AGAIN"
 msgstr "입력한 문자가 바르지 않습니다. 다시 시도하세요."
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "검색"
+
+msgid "IDS_COM_POP_MAXIMUM_NUMBER_OF_CHARACTERS_REACHED"
+msgstr "최대 글자 수에 도달하였습니다."
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "진행 중..."
+
+msgid "IDS_COM_SK_ADD"
+msgstr "추가"
+
+msgid "IDS_COM_SK_OK"
+msgstr "확인"
+
+msgid "IDS_COM_SK_CANCEL"
+msgstr "취소"
+
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "무음"
 
+msgid "IDS_COM_BODY_SELECT_ALL"
+msgstr "모두 선택"
+
 msgid "IDS_COM_BODY_PD_SELECTED"
 msgstr "%d개 선택"
+
+msgid "IDS_COM_BODY_UNSUPPORTED_FILE_TYPE"
+msgstr "지원되지 않는 파일 형식입니다."
 
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "%d개까지 선택할 수 있습니다."
@@ -37,14 +67,44 @@ msgstr "%d개까지 선택할 수 있습니다."
 msgid "IDS_MF_POP_DELETE_Q"
 msgstr "삭제할까요?"
 
+msgid "IDS_COM_POP_FAILED"
+msgstr "완료하지 못하였습니다."
+
+msgid "IDS_COM_SK_DONE"
+msgstr "완료"
+
+msgid "IDS_COM_BODY_NO_ITEMS"
+msgstr "항목이 없습니다"
+
 msgid "IDS_MF_BODY_SD_CARD_ABB"
 msgstr "SD 카드"
 
 msgid "IDS_MF_BODY_DEVICE_MEMORY_ABB"
 msgstr "디바이스 메모리"
 
+msgid "IDS_COM_BODY_OPERATION_FAILED"
+msgstr "작업을 수행하지 못하였습니다."
+
 msgid "IDS_MUSIC_POP_UNABLE_TO_PLAY_ERROR_OCCURRED"
 msgstr "재생할 수 없습니다. 오류가 발생하였습니다."
+
+msgid "IDS_COM_BODY_UNKNOWN"
+msgstr "알 수 없음"
+
+msgid "IDS_COM_POP_CONNECTION_FAILED"
+msgstr "연결하지 못하였습니다."
+
+msgid "IDS_COM_SK_BACK"
+msgstr "뒤로가기"
+
+msgid "IDS_COM_POP_ALREDY_EXISTS"
+msgstr "동일한 항목이 있습니다."
+
+msgid "IDS_COM_BODY_MY_FILES"
+msgstr "내 파일"
+
+msgid "IDS_COM_POP_NOT_ENOUGH_MEMORY"
+msgstr "저장공간이 부족합니다."
 
 msgid "IDS_TPLATFORM_ACBUTTON_DONE_ABB"
 msgstr "완료"
@@ -57,6 +117,10 @@ msgstr "최대 파일 크기 %dMB를 초과하였습니다."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "최대 파일 크기를 초과하였습니다."
+
 msgid "IDS_COM_OPT_IMPORT"
 msgstr "가져오기"
+
+msgid "IDS_COM_POP_FOLDER"
+msgstr "폴더"
 
