--- a/res/po/pt_BR.po
+++ b/res/po/pt_BR.po
@@ -1,3 +1,9 @@
+msgid "IDS_COM_BODY_DELETE"
+msgstr "Excluir"
+
+msgid "IDS_COM_BODY_CREATE_FOLDER"
+msgstr "Criar pasta"
+
 msgid "IDS_MF_POP_ERR_FOLDER_NAME_EMPTY"
 msgstr "Insira o nome da pasta."
 
@@ -25,11 +31,35 @@ msgstr "Selecionar itens"
 msgid "IDS_VR_POP_INVALID_CHARACTER_ENTERED_TRY_AGAIN"
 msgstr "Caractere inválido inserido. Tente novamente"
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "Pesquisar"
+
+msgid "IDS_COM_POP_MAXIMUM_NUMBER_OF_CHARACTERS_REACHED"
+msgstr "Número máximo de caracteres atingido."
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "Processando…"
+
+msgid "IDS_COM_SK_ADD"
+msgstr "Adicionar"
+
+msgid "IDS_COM_SK_OK"
+msgstr "OK"
+
+msgid "IDS_COM_SK_CANCEL"
+msgstr "Cancelar"
+
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Silencioso"
 
+msgid "IDS_COM_BODY_SELECT_ALL"
+msgstr "Selecionar tudo"
+
 msgid "IDS_COM_BODY_PD_SELECTED"
 msgstr "%d selecionado(s)"
+
+msgid "IDS_COM_BODY_UNSUPPORTED_FILE_TYPE"
+msgstr "Tipo de arquivo não suportado."
 
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Você pode selecionar até %d itens."
@@ -37,14 +67,44 @@ msgstr "Você pode selecionar até %d itens."
 msgid "IDS_MF_POP_DELETE_Q"
 msgstr "Apagar?"
 
+msgid "IDS_COM_POP_FAILED"
+msgstr "Falhou."
+
+msgid "IDS_COM_SK_DONE"
+msgstr "Concluir"
+
+msgid "IDS_COM_BODY_NO_ITEMS"
+msgstr "Sem itens"
+
 msgid "IDS_MF_BODY_SD_CARD_ABB"
 msgstr "Cartão SD"
 
 msgid "IDS_MF_BODY_DEVICE_MEMORY_ABB"
 msgstr "Memória do dispositivo"
 
+msgid "IDS_COM_BODY_OPERATION_FAILED"
+msgstr "Operação falhou."
+
 msgid "IDS_MUSIC_POP_UNABLE_TO_PLAY_ERROR_OCCURRED"
 msgstr "Impossível reproduzir. Ocorreu um erro."
+
+msgid "IDS_COM_BODY_UNKNOWN"
+msgstr "Desconhecido"
+
+msgid "IDS_COM_POP_CONNECTION_FAILED"
+msgstr "Falha de conexão."
+
+msgid "IDS_COM_SK_BACK"
+msgstr "Voltar"
+
+msgid "IDS_COM_POP_ALREDY_EXISTS"
+msgstr "Já existe."
+
+msgid "IDS_COM_BODY_MY_FILES"
+msgstr "Meus Arquivos"
+
+msgid "IDS_COM_POP_NOT_ENOUGH_MEMORY"
+msgstr "Memória insuficiente."
 
 msgid "IDS_TPLATFORM_ACBUTTON_DONE_ABB"
 msgstr "CONCLUÍDO"
@@ -57,6 +117,10 @@ msgstr "Tamanho máximo do arquivo (%d MB) excedido."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Tamanho máximo dos arquivos excedido."
+
 msgid "IDS_COM_OPT_IMPORT"
 msgstr "Importar"
+
+msgid "IDS_COM_POP_FOLDER"
+msgstr "Pasta"
 
