--- a/res/po/pt_PT.po
+++ b/res/po/pt_PT.po
@@ -1,3 +1,9 @@
+msgid "IDS_COM_BODY_DELETE"
+msgstr "Eliminar"
+
+msgid "IDS_COM_BODY_CREATE_FOLDER"
+msgstr "Criar pasta"
+
 msgid "IDS_MF_POP_ERR_FOLDER_NAME_EMPTY"
 msgstr "Introduzir nome da pasta."
 
@@ -25,11 +31,35 @@ msgstr "Seleccionar itens"
 msgid "IDS_VR_POP_INVALID_CHARACTER_ENTERED_TRY_AGAIN"
 msgstr "Introduzidos caracteres inválidos. Tente novamente."
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "Procurar"
+
+msgid "IDS_COM_POP_MAXIMUM_NUMBER_OF_CHARACTERS_REACHED"
+msgstr "Número máximo de caracteres atingido."
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "A processar..."
+
+msgid "IDS_COM_SK_ADD"
+msgstr "Adicionar"
+
+msgid "IDS_COM_SK_OK"
+msgstr "OK"
+
+msgid "IDS_COM_SK_CANCEL"
+msgstr "Cancelar"
+
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Silencioso"
 
+msgid "IDS_COM_BODY_SELECT_ALL"
+msgstr "Seleccionar tudo"
+
 msgid "IDS_COM_BODY_PD_SELECTED"
 msgstr "%d seleccionada(s)"
+
+msgid "IDS_COM_BODY_UNSUPPORTED_FILE_TYPE"
+msgstr "Tipo de ficheiro não suportado."
 
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Pode seleccionar até %d itens."
@@ -37,14 +67,44 @@ msgstr "Pode seleccionar até %d itens."
 msgid "IDS_MF_POP_DELETE_Q"
 msgstr "Eliminar?"
 
+msgid "IDS_COM_POP_FAILED"
+msgstr "Falha."
+
+msgid "IDS_COM_SK_DONE"
+msgstr "Concluído"
+
+msgid "IDS_COM_BODY_NO_ITEMS"
+msgstr "Sem itens"
+
 msgid "IDS_MF_BODY_SD_CARD_ABB"
 msgstr "Cartão SD"
 
 msgid "IDS_MF_BODY_DEVICE_MEMORY_ABB"
 msgstr "Memória do dispositivo"
 
+msgid "IDS_COM_BODY_OPERATION_FAILED"
+msgstr "Operação falhou."
+
 msgid "IDS_MUSIC_POP_UNABLE_TO_PLAY_ERROR_OCCURRED"
 msgstr "Impossível reproduzir. Ocorreu um erro."
+
+msgid "IDS_COM_BODY_UNKNOWN"
+msgstr "Desconhecido"
+
+msgid "IDS_COM_POP_CONNECTION_FAILED"
+msgstr "Falha na ligação."
+
+msgid "IDS_COM_SK_BACK"
+msgstr "Voltar"
+
+msgid "IDS_COM_POP_ALREDY_EXISTS"
+msgstr "Já existe."
+
+msgid "IDS_COM_BODY_MY_FILES"
+msgstr "Os Meus Ficheiros"
+
+msgid "IDS_COM_POP_NOT_ENOUGH_MEMORY"
+msgstr "Memória interna cheia"
 
 msgid "IDS_TPLATFORM_ACBUTTON_DONE_ABB"
 msgstr "CONCLUÍDO"
@@ -57,6 +117,10 @@ msgstr "Tamanho máximo de ficheiro (%d MB) excedido."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Tamanho máximo dos ficheiros excedido."
+
 msgid "IDS_COM_OPT_IMPORT"
 msgstr "Importar"
+
+msgid "IDS_COM_POP_FOLDER"
+msgstr "Pasta"
 
