--- a/res/po/tr_TR.po
+++ b/res/po/tr_TR.po
@@ -1,3 +1,9 @@
+msgid "IDS_COM_BODY_DELETE"
+msgstr "Sil"
+
+msgid "IDS_COM_BODY_CREATE_FOLDER"
+msgstr "Klasör oluştur"
+
 msgid "IDS_MF_POP_ERR_FOLDER_NAME_EMPTY"
 msgstr "Klasör adını girin."
 
@@ -25,11 +31,35 @@ msgstr "Öğeleri seç"
 msgid "IDS_VR_POP_INVALID_CHARACTER_ENTERED_TRY_AGAIN"
 msgstr "Geçersiz karakter girildi. Yeniden deneyin."
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "Ara"
+
+msgid "IDS_COM_POP_MAXIMUM_NUMBER_OF_CHARACTERS_REACHED"
+msgstr "Maksimum karakter sayısına ulaşıldı."
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "Uygulanıyor..."
+
+msgid "IDS_COM_SK_ADD"
+msgstr "Ekle"
+
+msgid "IDS_COM_SK_OK"
+msgstr "Tamam"
+
+msgid "IDS_COM_SK_CANCEL"
+msgstr "İptal"
+
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Sessiz"
 
+msgid "IDS_COM_BODY_SELECT_ALL"
+msgstr "Hepsini seç"
+
 msgid "IDS_COM_BODY_PD_SELECTED"
 msgstr "%d seçildi"
+
+msgid "IDS_COM_BODY_UNSUPPORTED_FILE_TYPE"
+msgstr "Dosya türü desteklenmiyor."
 
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "%d öğeye kadar seçebilirsiniz."
@@ -37,14 +67,44 @@ msgstr "%d öğeye kadar seçebilirsiniz."
 msgid "IDS_MF_POP_DELETE_Q"
 msgstr "Sil?"
 
+msgid "IDS_COM_POP_FAILED"
+msgstr "Başarısız oldu."
+
+msgid "IDS_COM_SK_DONE"
+msgstr "Tamam"
+
+msgid "IDS_COM_BODY_NO_ITEMS"
+msgstr "Öğe yok"
+
 msgid "IDS_MF_BODY_SD_CARD_ABB"
 msgstr "SD kart"
 
 msgid "IDS_MF_BODY_DEVICE_MEMORY_ABB"
 msgstr "Cihaz hafızası"
 
+msgid "IDS_COM_BODY_OPERATION_FAILED"
+msgstr "İşlem başarısız."
+
 msgid "IDS_MUSIC_POP_UNABLE_TO_PLAY_ERROR_OCCURRED"
 msgstr "Çalınamıyor. Hata meydana geldi."
+
+msgid "IDS_COM_BODY_UNKNOWN"
+msgstr "Bilinmeyen"
+
+msgid "IDS_COM_POP_CONNECTION_FAILED"
+msgstr "Bağlantı başarısız."
+
+msgid "IDS_COM_SK_BACK"
+msgstr "Geri"
+
+msgid "IDS_COM_POP_ALREDY_EXISTS"
+msgstr "Zaten var."
+
+msgid "IDS_COM_BODY_MY_FILES"
+msgstr "Dosyalarım"
+
+msgid "IDS_COM_POP_NOT_ENOUGH_MEMORY"
+msgstr "Yeterli hafıza yok."
 
 msgid "IDS_TPLATFORM_ACBUTTON_DONE_ABB"
 msgstr "BİTTİ"
@@ -57,6 +117,10 @@ msgstr "Maksimum dosya boyutu (%d MB) aşıldı."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Maksimum dosya boyutu aşıldı."
+
 msgid "IDS_COM_OPT_IMPORT"
 msgstr "Dışardan al"
+
+msgid "IDS_COM_POP_FOLDER"
+msgstr "Klasör"
 
