--- a/res/po/zh_CN.po
+++ b/res/po/zh_CN.po
@@ -1,3 +1,9 @@
+msgid "IDS_COM_BODY_DELETE"
+msgstr "删除"
+
+msgid "IDS_COM_BODY_CREATE_FOLDER"
+msgstr "新建文件夹"
+
 msgid "IDS_MF_POP_ERR_FOLDER_NAME_EMPTY"
 msgstr "输入文件夹名称"
 
@@ -25,11 +31,35 @@ msgstr "选择项目"
 msgid "IDS_VR_POP_INVALID_CHARACTER_ENTERED_TRY_AGAIN"
 msgstr "输入的字符无效。请重试。"
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "搜索"
+
+msgid "IDS_COM_POP_MAXIMUM_NUMBER_OF_CHARACTERS_REACHED"
+msgstr "已达到最大字符限制"
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "处理中..."
+
+msgid "IDS_COM_SK_ADD"
+msgstr "添加"
+
+msgid "IDS_COM_SK_OK"
+msgstr "确定"
+
+msgid "IDS_COM_SK_CANCEL"
+msgstr "取消"
+
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "静音"
 
+msgid "IDS_COM_BODY_SELECT_ALL"
+msgstr "全选"
+
 msgid "IDS_COM_BODY_PD_SELECTED"
 msgstr "%d 已选择"
+
+msgid "IDS_COM_BODY_UNSUPPORTED_FILE_TYPE"
+msgstr "不支持的文件类型。"
 
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "最多可选择 %d 个视频。"
@@ -37,14 +67,44 @@ msgstr "最多可选择 %d 个视频。"
 msgid "IDS_MF_POP_DELETE_Q"
 msgstr "删除？"
 
+msgid "IDS_COM_POP_FAILED"
+msgstr "失败"
+
+msgid "IDS_COM_SK_DONE"
+msgstr "完成"
+
+msgid "IDS_COM_BODY_NO_ITEMS"
+msgstr "没有内容"
+
 msgid "IDS_MF_BODY_SD_CARD_ABB"
 msgstr "SD卡"
 
 msgid "IDS_MF_BODY_DEVICE_MEMORY_ABB"
 msgstr "手机内存"
 
+msgid "IDS_COM_BODY_OPERATION_FAILED"
+msgstr "操作失败"
+
 msgid "IDS_MUSIC_POP_UNABLE_TO_PLAY_ERROR_OCCURRED"
 msgstr "无法播放。出错。"
+
+msgid "IDS_COM_BODY_UNKNOWN"
+msgstr "未知"
+
+msgid "IDS_COM_POP_CONNECTION_FAILED"
+msgstr "连接失败"
+
+msgid "IDS_COM_SK_BACK"
+msgstr "返回"
+
+msgid "IDS_COM_POP_ALREDY_EXISTS"
+msgstr "已存在。"
+
+msgid "IDS_COM_BODY_MY_FILES"
+msgstr "我的文件"
+
+msgid "IDS_COM_POP_NOT_ENOUGH_MEMORY"
+msgstr "没有足够内存。"
 
 msgid "IDS_TPLATFORM_ACBUTTON_DONE_ABB"
 msgstr "完成"
@@ -57,6 +117,10 @@ msgstr "已超过最大文件大小（%d MB）。"
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "已达到文件最大尺寸。"
+
 msgid "IDS_COM_OPT_IMPORT"
 msgstr "导入"
+
+msgid "IDS_COM_POP_FOLDER"
+msgstr "文件夹"
 
